--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 <body>
     <div class="container">
         <input type="text" readonly>
-        <button id="one" value="1">1</button>
-        <button id="two" value="2">2</button>
-        <button id="three" value="3">3</button>
-        <button id="four" value="4">4</button>
-        <button id="five" value="5">5</button>
-        <button id="six" value="6">6</button>
-        <button id="seven" value="7">7</button>
-        <button id="eight" value="8">8</button>
-        <button id="nine" value="9">9</button>
-        <button id="zero" value="0">0</button>
-        <button id="C" value=" ">C</button>
-        <button id="add" value="+">+</button>
-        <button id="sub" value="-">-</button>
-        <button id="mul" value="*">*</button>
-        <button id="div" value="/">/</button>
-        <button id="equal" value="=">=</button>
+        <button id="one" class="number">1</button>
+        <button id="two" class="number">2</button>
+        <button id="three" class="number">3</button>
+        <button id="four" class="number">4</button>
+        <button id="five" class="number">5</button>
+        <button id="six" class="number">6</button>
+        <button id="seven" class="number">7</button>
+        <button id="eight" class="number">8</button>
+        <button id="nine" class="number">9</button>
+        <button id="zero" class="number">0</button>
+        <button id="dot" class="number">.</button>
+        <button id="C" value=" " class="symbol">C</button>
+        <button id="del" class="symbol">B</button>
+        <button id="add" class="symbol">+</button>
+        <button id="sub" class="symbol">-</button>
+        <button id="mul" class="symbol">*</button>
+        <button id="div" class="symbol">/</button>
+        <button id="mod" class="symbol">%</button>
+        <button id="equal" class="symbol">=</button>
     </div>
     <script src="calc.js"></script>
 </body>
